--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<title>Radial Clock</title>
 		<link rel="stylesheet" href="app.css" />
+		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 		<script type="text/javascript" src="app.js"></script> 	
+		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 	</head>
 	<body>
-		<div class="container">
-			<canvas id="canvas" width="500" height="500"></canvas>
-		</div>
+		<canvas id="canvas"></canvas>
 	</body>
 </html>
