tmp branch from mac

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 		<meta name="apple-touch-fullscreen" content="yes" />
 	</head>
 	<body>
-		<canvas id="canvas"></canvas>
+		<svg>
+			<path class="msecs arc" stroke-linecap="round" fill="none" />
+			<path class="secs arc" stroke-linecap="round" fill="none" />
+			<path class="mins arc" stroke-linecap="round" fill="none" />
+			<path class="hours arc" stroke-linecap="round" fill="none" />
+		</svg>
 		<script type="text/javascript" src="app.js"></script>
 	</body>
 </html>
